--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -6,6 +6,7 @@
   overflow-y: scroll;
   border-radius: var(--border-radius-1);
   box-shadow: 0 3px 5px #000;
+  box-shadow: var(box-shadow-1);
   text-decoration: none;
 
   &__inner {
