--- a/client/src/pages/MovieVideos/_movieVideos.scss
+++ b/client/src/pages/MovieVideos/_movieVideos.scss
@@ -21,11 +21,18 @@
         height: 200px;
         border-radius: var(--border-radius-1);
 
-        .img {
+        .img,
+        .img-icon {
           height: 200px;
           width: 100%;
           border-radius: var(--border-radius-1);
           object-fit: cover;
+        }
+
+        .img-icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
 
         .cover {
