--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,8 +1,8 @@
 #root {
   --primary: #f5c518;
-  // --primary: #1db954;
-  // --primary: #1da1f2;
-  // --primary: #e50914;
+  //--primary: #1db954;
+  //--primary: #1da1f2;
+  //--primary: #e50914;
   //--primary: goldenrod;
   --secondary: #e50914;
 
@@ -66,6 +66,8 @@
   --box-shadow-1: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+
+  --box-shadow-1: 0 0 3px #000;
 }
 
 .primaryBg {
@@ -361,10 +363,9 @@ body {
 @import '../components/PlayerOne/playerOne';
 
 @import '../components/ActorCard/actorCard';
-
 @import '../components/BackdropCard/backdropCard';
-
 @import '../components/VideoCard/videoCard';
+@import '../components/ReviewCard/reviewCard';
 
 // pages
 @import '../pages/Home/home';
