--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -367,6 +367,8 @@ body {
 @import '../components/ReviewCard/reviewCard';
 
 @import '../components/FullCast/fullCast';
+@import '../components/AllBackdrops/allBackdrops';
+@import '../components/AllVideos/allVideos';
 
 // pages
 @import '../pages/Home/home';
