--- a/client/src/pages/ActorDetail/_actorDetail.scss
+++ b/client/src/pages/ActorDetail/_actorDetail.scss
@@ -16,7 +16,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      //padding-top: 35vh;
     }
 
     &__img-name-birth-place {
@@ -27,7 +26,7 @@
         width: 233.3px;
         height: 350px;
         margin-right: 2rem;
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
         border-radius: var(--border-radius-1);
 
         .img {
@@ -64,6 +63,7 @@
         }
 
         .tag {
+          width: 233.3px;
           margin-bottom: 0.25rem;
           font-size: 0.9rem;
           font-weight: 500;
@@ -103,7 +103,6 @@
           .place,
           .birth {
             width: 170px;
-            //font-size: 0.9rem;
           }
         }
       }
@@ -145,12 +144,15 @@
           .birth {
             width: 100%;
             width: unset;
-            //font-size: 0.9rem;
           }
 
           .place,
           .birth {
             font-size: 0.8rem;
+          }
+
+          .tag {
+            width: 100%;
           }
         }
       }
