--- a/client/src/components/CastBackdropsVideo/Videos/Video/_video.scss
+++ b/client/src/components/CastBackdropsVideo/Videos/Video/_video.scss
@@ -4,6 +4,7 @@
   width: 292px;
   height: 165px;
   border-radius: var(--border-radius-1);
+  box-shadow: var(--box-shadow-1);
 
   iframe {
     width: 292px;
