--- a/client/src/components/BackdropCard/_backdropCard.scss
+++ b/client/src/components/BackdropCard/_backdropCard.scss
@@ -3,17 +3,30 @@
   width: 100%;
   height: 175px;
   border-radius: var(--border-radius-1);
+  box-shadow: var(--box-shadow-1);
 
-  .img {
+  .backdrop__card__image {
     width: 100%;
     height: 175px;
     border-radius: var(--border-radius-1);
-  }
+    overflow: hidden;
 
-  .img:hover {
-    filter: brightness(80%);
-    transition: var(--transition);
+    .img {
+      width: 100%;
+      height: 175px;
+      border-radius: var(--border-radius-1);
+    }
   }
+}
+
+.backdrop__card:hover .backdrop__card__image {
+  filter: brightness(80%);
+  transition: var(--transition);
+}
+
+.backdrop__card:hover .backdrop__card__image img {
+  transform: scale(1.25);
+  transition: var(--transition);
 }
 
 @media screen and (max-width: 540px) {
