--- a/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
+++ b/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem 1rem;
-  padding-left: 0;
+  //padding-left: 0;
   cursor: pointer;
   border-radius: var(--border-radius-1);
   width: max-content;
@@ -15,6 +15,8 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    box-shadow: var(--box-shadow-1);
+    overflow: hidden;
 
     .img {
       width: 100px;
@@ -47,8 +49,13 @@
   padding-right: 1rem;
 }
 
-.actor:hover .actor__image .img {
+.actor:hover .actor__image {
   filter: brightness(80%);
+  transition: var(--transition);
+}
+
+.actor:hover .actor__image .img {
+  transform: scale(1.1);
   transition: var(--transition);
 }
 
