--- a/client/src/components/ImageDetail/_imageDetail.scss
+++ b/client/src/components/ImageDetail/_imageDetail.scss
@@ -24,6 +24,7 @@
         height: 450px;
         border-radius: var(--border-radius-1);
         margin-right: 2rem;
+        box-shadow: var(--box-shadow-1);
 
         .img-1 {
           width: 300px;
@@ -148,18 +149,18 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          background: var(--red);
-          color: #fff;
+          background: var(--primary);
+          color: #000;
           width: fit-content;
           text-align: center;
           padding: 0.5rem;
           padding-right: 1rem;
           border-radius: 25px;
-          font-weight: 400;
+          font-weight: 500;
         }
 
         .play-btn:hover {
-          filter: brightness(80%);
+          border-radius: var(--border-radius-1);
           transition: var(--transition);
         }
       }
