--- a/client/src/components/List/_list.scss
+++ b/client/src/components/List/_list.scss
@@ -51,7 +51,7 @@
       &--number {
         font-weight: 500;
         position: absolute;
-        z-index: 1;
+        z-index: -1;
         bottom: -1rem;
         right: 0;
         padding: 0.5rem 1rem;
@@ -59,6 +59,7 @@
         color: #fff;
         border-top-left-radius: var(--border-radius-1);
         border-bottom-right-radius: var(--border-radius-1);
+        transition: var(--transition);
       }
 
       &__info {
