--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   min-height: 100vh;
-  z-index: 6;
+  z-index: 5;
   top: 0;
   left: 0;
   right: 0;
@@ -14,6 +14,8 @@
   transform: translateX(unset);
   transition: var(--transition);
 
+  padding-top: 58.6px;
+
   &__inner {
     display: flex;
     flex-direction: column;
@@ -22,6 +24,8 @@
     box-shadow: 0px 15px 10px -15px #111;
     border-bottom-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
+    transform: scale(0);
+    transition: var(--transition);
 
     .title-close {
       padding: 1rem 2rem;
@@ -29,6 +33,7 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 2rem;
+      display: none;
 
       .title {
         padding: 0.25rem 0.5rem;
@@ -65,6 +70,10 @@
         filter: brightness(80%);
         transition: var(--transition);
       }
+    }
+
+    .category-title {
+      margin-top: 2rem;
     }
 
     .category-title,
@@ -162,6 +171,10 @@
       .title-close {
         padding: 1rem 1rem 0 1rem;
         font-size: 1rem;
+      }
+
+      .category-title {
+        padding-top: 0;
       }
 
       .genre-title {
