--- a/client/src/components/Pagination/_pagination.scss
+++ b/client/src/components/Pagination/_pagination.scss
@@ -1,4 +1,4 @@
-.tv__buttons {
+.pagination {
   width: 100%;
   display: flex;
   align-items: center;
@@ -14,6 +14,11 @@
     width: 30px;
     border-radius: var(--border-radius-1);
     cursor: pointer;
+  }
+
+  &--prevBtn,
+  &--nextBtn {
+    color: #000;
   }
 
   &--btn:hover,
@@ -38,8 +43,8 @@
   color: #fff !important;
 }
 
-@media screen and (max-width: 786px) {
-  .buttons {
-    padding-bottom: 8rem;
-  }
-}
+// @media screen and (max-width: 786px) {
+//   .pagination {
+//     padding-bottom: 8rem;
+//   }
+// }
