--- a/client/src/components/VideoCard/_videoCard.scss
+++ b/client/src/components/VideoCard/_videoCard.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 165px;
   border-radius: var(--border-radius-1);
+  box-shadow: var(--box-shadow-1);
 
   iframe {
     width: 100%;
