--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -67,7 +67,8 @@
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 
-  --box-shadow-1: 0 0 3px #000;
+  --box-shadow-1: 0 0 1px rgba(0, 0, 0, 1);
+  --box-shadow-2: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .primaryBg {
@@ -329,15 +330,10 @@ body {
 @import '../components/Header/header';
 @import '../components/Header/SmallHeader/smallHeader';
 @import '../components/Header/Logout/logout';
-
-@import '../components/MovieList/movieList';
-@import '../components/MovieList/MovieCard/movieCard';
-@import '../components/MovieList/Pagination/pagination';
-@import '../components/MovieList/Sort/sort';
-
-@import '../components/TvList/tvList';
-@import '../components/TvList/TvCard/tvCard';
-@import '../components/TvList/Pagination/pagination';
+@import '../components/Sort/sort';
+@import '../components/Pagination/pagination';
+@import '../components/List/list';
+@import '../components/Card/card';
 
 @import '../components/Menu/menu';
 
