--- a/client/src/components/List/_list.scss
+++ b/client/src/components/List/_list.scss
@@ -218,19 +218,22 @@
         height: 300px;
 
         &--number {
-          background: #000;
-          color: #fff;
-          width: 100%;
+          z-index: 1 !important;
+          background: transparent;
+          color: rgb(156, 156, 156);
+          //width: 100%;
+          right: unset;
+          left: 0.5rem;
           text-align: center;
           bottom: -0.75rem;
           font-size: 0.75rem;
           padding: 0.25rem 0.5rem;
-          border-radius: 0;
+          //border-radius: 0;
         }
 
         &__info {
           bottom: 2rem;
-          left: 0.5rem;
+          left: 1rem;
           width: 90%;
           padding: 0;
 
