--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   transform: translateY(-120%);
   transform: translateX(unset);
-  transition: var(--transition);
+  //transition: var(--transition);
 
   padding-top: 58.6px;
 
