--- a/client/src/components/PlayerOne/_playerOne.scss
+++ b/client/src/components/PlayerOne/_playerOne.scss
@@ -46,6 +46,7 @@
       border-radius: unset;
       width: 100%;
       height: 70%;
+      border-radius: 0px;
     }
   }
 }
@@ -54,7 +55,7 @@
   .player {
     &__inner {
       height: 50%;
-      border-radius: 0;
+      border-radius: 0px;
 
       h1 {
         font-size: 1rem;
