--- a/client/src/components/PlayerOne/_playerOne.scss
+++ b/client/src/components/PlayerOne/_playerOne.scss
@@ -7,8 +7,10 @@
   top: 0;
   left: 0;
 
-  opacity: 0;
-  z-index: -1;
+  //opacity: 0;
+  transform: scaleY(0);
+  //z-index: -1;
+  z-index: 10;
   transition: z-index 0s ease, opacity 0s ease;
 
   display: flex;
@@ -16,7 +18,8 @@
   justify-content: center;
 
   &__inner {
-    opacity: 0;
+    //opacity: 0;
+    transform: scaleY(0);
     transition: opacity 0.5s ease;
     border-radius: var(--border-radius-1);
 
