--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   transform: translateY(-120%);
   transform: translateX(unset);
-  //transition: var(--transition);
+  transition: var(--transition);
 
   padding-top: 58.6px;
 
@@ -24,7 +24,7 @@
     box-shadow: 0px 15px 10px -15px #111;
     border-bottom-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
-    transform: scale(0);
+    transform: scaleY(0);
     transition: var(--transition);
 
     .title-close {
