--- a/client/src/components/Sort/_sort.scss
+++ b/client/src/components/Sort/_sort.scss
@@ -27,8 +27,10 @@
     border-radius: var(--border-radius-1);
     box-shadow: 0 3px 6px #000;
 
-    z-index: -1;
-    opacity: 0;
+    // z-index: -1;
+    // opacity: 0;
+    z-index: 5;
+    transform: scaleY(0);
     transition: var(--transition);
     margin-top: 0.25rem;
 
