--- a/client/src/pages/ActorDetail/_actorDetail.scss
+++ b/client/src/pages/ActorDetail/_actorDetail.scss
@@ -28,6 +28,7 @@
         margin-right: 2rem;
         margin-bottom: 0.5rem;
         border-radius: var(--border-radius-1);
+        box-shadow: var(--box-shadow-1);
 
         .img {
           width: 233.3px;
@@ -88,12 +89,12 @@
     &__inner {
       &__img-name-birth-place {
         &--image {
-          width: 170px;
-          height: 250px;
+          //width: 170px;
+          //height: 250px;
 
           .img {
-            width: 170px;
-            height: 250px;
+            //width: 170px;
+            //height: 250px;
             border-radius: var(--border-radius-1);
           }
         }
@@ -135,7 +136,16 @@
         flex-direction: row;
 
         &--image {
+          width: 170px;
+          height: 250px;
           margin-right: 1rem;
+          margin-bottom: 2rem;
+
+          .img {
+            width: 170px;
+            height: 250px;
+            border-radius: var(--border-radius-1);
+          }
         }
 
         &__detail {
@@ -148,7 +158,7 @@
 
           .place,
           .birth {
-            font-size: 0.8rem;
+            //font-size: 0.8rem;
           }
 
           .tag {
