--- a/client/src/components/ImageViewer/_imageViewer.scss
+++ b/client/src/components/ImageViewer/_imageViewer.scss
@@ -5,9 +5,9 @@
   top: 0;
   left: 0;
 
-  z-index: -1;
-  opacity: 0;
-  transition: z-index 0s ease, opacity 0s ease;
+  z-index: 10;
+  transform: scaleY(0);
+  transition: var(--transition);
 
   display: flex;
   align-items: center;
@@ -15,8 +15,8 @@
 
   &__inner {
     position: relative;
-    opacity: 0;
-    transition: opacity 0.5s ease;
+    transform: scaleY(0);
+    transition: var(--transition);
     border-radius: var(--border-radius-1);
     width: 1000px;
     height: 550px;
