--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -366,6 +366,8 @@ body {
 @import '../components/AllBackdrops/allBackdrops';
 @import '../components/AllVideos/allVideos';
 
+@import '../components/ReviewModal/reviewModal';
+
 // pages
 @import '../pages/Home/home';
 @import '../pages/Search/search';
