--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -57,7 +57,7 @@
 
   &__container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 2rem;
   }
 }
@@ -68,7 +68,7 @@
 
     &__container {
       display: grid;
-      grid-template-columns: 1fr;
+      //grid-template-columns: 1fr;
       gap: 0;
     }
   }
