--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -426,6 +426,7 @@ body::-webkit-scrollbar-thumb {
 /* Handle */
 .scroll-1::-webkit-scrollbar-thumb {
   background-color: #999;
+  border-radius: 3px;
 }
 
 // ----------------------------------------
@@ -447,4 +448,5 @@ body::-webkit-scrollbar-thumb {
 /* Handle */
 .scroll-2::-webkit-scrollbar-thumb {
   background-color: #999;
+  border-radius: 3px;
 }
