--- a/client/src/components/AllBackdrops/_allBackdrops.scss
+++ b/client/src/components/AllBackdrops/_allBackdrops.scss
@@ -159,8 +159,8 @@
 
       &__backdrops {
         grid-template-columns: 1fr 1fr;
-        align-items: flex-start;
-        justify-items: center;
+        //align-items: flex-start;
+        //justify-items: center;
       }
     }
   }
