--- a/client/src/components/BackdropCard/_backdropCard.scss
+++ b/client/src/components/BackdropCard/_backdropCard.scss
@@ -33,8 +33,12 @@
   .backdrop__card {
     height: 100px;
 
-    .img {
+    .backdrop__card__image {
       height: 100px;
+
+      .img {
+        height: 100px;
+      }
     }
   }
 }
