--- a/client/src/components/ReviewModal/_reviewModal.scss
+++ b/client/src/components/ReviewModal/_reviewModal.scss
@@ -15,7 +15,7 @@
   &__inner {
     height: 100%;
     max-width: 100%;
-    padding: 0.5rem;
+    padding: 0.5rem 0.75rem;
     margin: 0 0rem 1.5rem 0rem;
     border-top-left-radius: var(--border-radius-1);
     border-top-right-radius: var(--border-radius-1);
