--- a/client/src/components/Card/_card.scss
+++ b/client/src/components/Card/_card.scss
@@ -168,8 +168,8 @@
           margin-right: 0.5rem;
           width: 50px;
           height: 50px;
-          // background: linear-gradient(tomato, red) !important;
-          // color: #fff !important;
+          background: var(--primary) !important;
+          color: #000 !important;
         }
 
         &--more:hover,
