--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -111,7 +111,7 @@
           border-radius: 50px;
           display: flex;
           align-items: center;
-          justify-content: center;
+          //justify-content: center;
         }
 
         p,
@@ -125,7 +125,7 @@
             background: #000;
             color: #fff;
             width: 25px;
-            text-align: center;
+            //text-align: center;
             margin: 0 0.5rem 0 0;
             text-transform: capitalize;
           }
