--- a/client/src/components/AllBackdrops/_allBackdrops.scss
+++ b/client/src/components/AllBackdrops/_allBackdrops.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 
     &--image {
       position: relative;
@@ -44,13 +44,20 @@
       width: 100%;
       display: flex;
       align-items: flex-start;
-      font-size: 2rem;
-      font-weight: 500;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    &--title {
+      font-size: 1.25rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
     }
 
     &--tagline {
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
+      display: none;
+      font-weight: 500;
+      font-size: 0.9rem;
+      margin-bottom: 2rem;
     }
   }
 
@@ -58,8 +65,9 @@
     width: 100%;
 
     &--title {
-      font-size: 1.4rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 700;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
       display: flex;
       align-items: center;
       border-left: 4px solid var(--primary);
@@ -71,11 +79,12 @@
       .length {
         margin: 0;
         position: relative;
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
         background: var(--primary);
         border-radius: 50%;
         margin-left: 0.5rem;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
         span {
           position: absolute;
@@ -108,23 +117,11 @@
     padding: calc(58.4px + 1rem) 0 2rem 0;
     margin: 0 1rem;
 
-    &__detail {
-      &--title,
-      &--tagline {
-        font-size: 1.5rem;
-      }
-
-      &--tagline {
-        font-size: 1rem;
-        margin-bottom: 0.5rem;
-      }
-    }
-
     &__container {
       &__backdrops {
         gap: 1rem;
         overflow-x: auto;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
       }
     }
   }
@@ -132,35 +129,9 @@
 
 @media screen and (max-width: 640px) {
   .all__backdrops {
-    &__detail {
-      &--title {
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-      }
-
-      &--tagline {
-        display: none;
-      }
-    }
-
     &__container {
-      &--title {
-        font-size: 1rem;
-
-        .length {
-          height: 30px;
-          width: 30px;
-
-          span {
-            font-size: 0.75rem;
-          }
-        }
-      }
-
       &__backdrops {
         grid-template-columns: 1fr 1fr;
-        //align-items: flex-start;
-        //justify-items: center;
       }
     }
   }
