--- a/client/src/components/AllVideos/_allVideos.scss
+++ b/client/src/components/AllVideos/_allVideos.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 
     &--image {
       position: relative;
@@ -44,12 +44,19 @@
       width: 100%;
       display: flex;
       align-items: flex-start;
-      font-size: 2rem;
-      font-weight: 500;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    &--title {
+      font-size: 1.25rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
     }
 
     &--tagline {
-      font-size: 1.1rem;
+      display: none;
+      font-weight: 500;
+      font-size: 0.9rem;
       margin-bottom: 1rem;
     }
   }
@@ -58,8 +65,10 @@
     width: 100%;
 
     &--title {
-      font-size: 1.4rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 700;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+
       display: flex;
       align-items: center;
       border-left: 4px solid var(--primary);
@@ -76,6 +85,7 @@
         background: var(--primary);
         border-radius: 50%;
         margin-left: 0.5rem;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
         span {
           position: absolute;
@@ -95,7 +105,7 @@
 
     &__videos {
       padding: 2rem 0rem 2rem 0;
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 2rem 2rem;
@@ -105,26 +115,12 @@
 
 @media screen and (max-width: 786px) {
   .all__videos {
-    padding: calc(58.4px + 1rem) 0 2rem 0;
+    padding: calc(58.4px + 1rem) 0 0 0;
     margin: 0 1rem;
-
-    &__detail {
-      &--title,
-      &--tagline {
-        font-size: 1.5rem;
-      }
-
-      &--tagline {
-        font-size: 1rem;
-        margin-bottom: 0.5rem;
-      }
-    }
 
     &__container {
       &__videos {
         gap: 1rem;
-        overflow-x: auto;
-        margin-bottom: 2rem;
       }
     }
   }
@@ -132,31 +128,7 @@
 
 @media screen and (max-width: 640px) {
   .all__videos {
-    &__detail {
-      &--title {
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-      }
-
-      &--tagline {
-        display: none;
-      }
-    }
-
     &__container {
-      &--title {
-        font-size: 1rem;
-
-        .length {
-          height: 30px;
-          width: 30px;
-
-          span {
-            font-size: 0.75rem;
-          }
-        }
-      }
-
       &__videos {
         grid-template-columns: 1fr 1fr;
       }
