--- a/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
+++ b/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
@@ -14,19 +14,21 @@
       margin: 0;
       display: flex;
       align-items: center;
-      font-size: 1.4rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 700;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
 
       .length {
         margin: 0;
         position: relative;
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
         background: var(--primary);
         border-radius: 50%;
         margin-left: 0.5rem;
 
         span {
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
           position: absolute;
           top: 50%;
           left: 50%;
@@ -58,23 +60,23 @@
   .castBackdropVideo {
     padding: 0 0 0 1rem;
 
-    &__cast,
-    &__backdrops,
-    &__videos {
-      &__title-1,
-      &__title-2 {
-        font-size: 1rem;
+    //   &__cast,
+    //   &__backdrops,
+    //   &__videos {
+    //     &__title-1,
+    //     &__title-2 {
+    //       font-size: 1rem;
 
-        .length {
-          height: 30px;
-          width: 30px;
+    //       .length {
+    //         height: 30px;
+    //         width: 30px;
 
-          span {
-            font-size: 0.75rem;
-          }
-        }
-      }
-    }
+    //         span {
+    //           font-size: 0.75rem;
+    //         }
+    //       }
+    //     }
+    //   }
   }
 }
 
