--- a/client/src/components/ImageDetail/_imageDetail.scss
+++ b/client/src/components/ImageDetail/_imageDetail.scss
@@ -94,20 +94,23 @@
           flex-direction: column;
 
           .title {
-            font-weight: 500;
-            font-size: 1.5rem;
+            font-weight: 700;
+            font-size: 1.25rem;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            margin-bottom: 0.5rem;
           }
 
           .tagline {
-            font-weight: 500;
-            font-size: 1rem;
+            font-weight: 700;
+            font-size: 0.9rem;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            margin-bottom: 0.5rem;
           }
         }
 
         .date-time {
           display: flex;
           align-items: center;
-          margin-top: 0.5rem;
           margin-bottom: 2rem;
 
           .date,
@@ -116,7 +119,8 @@
             display: flex;
             align-items: center;
             font-weight: 400;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
           }
 
           .gap {
@@ -128,7 +132,7 @@
         .genres {
           display: flex;
           flex-wrap: wrap;
-          margin-bottom: 0.5rem;
+          margin-bottom: 1.5rem;
 
           span {
             margin-right: 0.5rem;
@@ -183,7 +187,7 @@
     margin-bottom: 2rem;
 
     .cover {
-      padding-top: 0;
+      padding-top: 1rem;
 
       .image-detail {
         margin-bottom: 2rem;
@@ -201,20 +205,24 @@
             flex-direction: column;
 
             .title {
-              font-weight: 500;
-              font-size: 1.5rem;
+              font-weight: 700;
+              font-size: 1.25rem;
+              font-family: Verdana, Geneva, Tahoma, sans-serif;
+              margin-bottom: 0.5rem;
             }
 
             .tagline {
               font-weight: 500;
-              font-size: 1.1rem;
+              font-size: 0.9rem;
+              font-family: Verdana, Geneva, Tahoma, sans-serif;
+              margin-bottom: 0.5rem;
             }
           }
 
           .date-time {
             display: flex;
             align-items: center;
-            margin-top: 0.5rem;
+            margin-bottom: 0rem;
 
             .date,
             .time {
@@ -222,7 +230,8 @@
               display: flex;
               align-items: center;
               font-weight: 400;
-              font-size: 0.9rem;
+              font-size: 0.8rem;
+              font-family: Verdana, Geneva, Tahoma, sans-serif;
             }
 
             .gap {
@@ -236,7 +245,7 @@
           position: relative;
           width: 100%;
           height: 100%;
-          margin-bottom: 2rem;
+          margin-bottom: 1.5rem;
 
           .img-1,
           .img-icon-1 {
@@ -271,6 +280,7 @@
           }
 
           .genres {
+            margin-bottom: 0.5rem;
             span {
               font-size: 0.9rem;
             }
@@ -289,21 +299,9 @@
 @media screen and (max-width: 640px) {
   .image-detail-container {
     .cover {
-      padding: 0 1rem 1rem 1rem;
+      padding: 0rem 1rem 1rem 1rem;
 
       .image-detail {
-        .title-tagline-date-time {
-          .title-tagline {
-            .title {
-              font-size: 1.2rem;
-            }
-
-            .tagline {
-              display: none;
-            }
-          }
-        }
-
         .detail {
           .play-btn {
             padding: 0.5rem 0;
