--- a/client/src/components/List/_list.scss
+++ b/client/src/components/List/_list.scss
@@ -74,37 +74,11 @@
         border-bottom-left-radius: var(--border-radius);
         border-radius: var(--border-radius);
 
-        &__rating-title {
-          display: flex;
-          flex-direction: column;
-
-          .rating {
-            display: none;
-            width: fit-content;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            position: absolute;
-            right: -1rem;
-            top: -2rem;
-            box-shadow: 0px 5px 5px #000;
-
-            span {
-              font-weight: 500;
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-            }
-          }
-
+        &__title {
           .title {
-            font-size: 1.5rem;
-            font-weight: 500;
-          }
-
-          .length {
-            display: none;
+            font-size: 1.25rem;
+            font-weight: 700;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
           }
         }
 
@@ -115,14 +89,16 @@
       }
     }
 
+    &--length {
+      display: none;
+    }
+
     &__buttons {
       z-index: -1;
       justify-content: space-between;
       width: 100%;
       position: absolute;
-      bottom: 47%;
-      // left: 1rem;
-      // right: 1rem;
+      bottom: 45%;
       display: flex;
       align-items: center;
       padding: 0.5rem 0;
@@ -275,23 +251,14 @@
         &__info {
           bottom: 1rem;
           left: 1rem;
-          //width: 90%;
 
           width: 200px;
 
           padding: 0;
 
-          &__rating-title {
+          &__title {
             .title {
               font-size: 0.9rem;
-            }
-
-            .length {
-              display: flex;
-              font-size: 0.8rem;
-              font-weight: 500;
-              color: rgb(156, 156, 156);
-              margin-top: 0.5rem;
             }
           }
 
@@ -301,11 +268,24 @@
         }
       }
 
+      &--length {
+        display: flex;
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        font-size: 0.8rem;
+        border-radius: var(--border-radius-1);
+        padding: 0.5rem 1rem;
+        font-weight: 500;
+        width: 40px;
+      }
+
       &__buttons {
         z-index: 1 !important;
         justify-content: space-between;
         left: 0rem;
         right: 0rem;
+        bottom: 42.5%;
 
         p:first-child {
           margin-left: 1rem;
