--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -7,8 +7,9 @@
     margin: 0;
     display: flex;
     align-items: center;
-    font-size: 1.4rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 700;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 2rem;
     border-left: 4px solid var(--primary);
 
@@ -19,8 +20,8 @@
     .length {
       margin: 0;
       position: relative;
-      height: 40px;
-      width: 40px;
+      height: 30px;
+      width: 30px;
       background: var(--primary);
       border-radius: 50%;
       margin-left: 0.5rem;
@@ -67,10 +68,6 @@
     padding: 0rem 2rem;
 
     &__container {
-      // display: grid;
-      // grid-template-columns: 1fr;
-      // gap: 0;
-
       display: unset;
       width: min-content;
     }
