--- a/client/src/other/Switch/_switch.scss
+++ b/client/src/other/Switch/_switch.scss
@@ -13,19 +13,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    //font-weight: 500;
   }
 
   &__movie {
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    margin-right: 0.1rem;
+    border-top-left-radius: var(--border-radius-1);
+    border-bottom-left-radius: var(--border-radius-1);
+    margin-right: 0rem;
   }
 
   &__tv {
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    margin-left: 0.1rem;
+    border-top-right-radius: var(--border-radius-1);
+    border-bottom-right-radius: var(--border-radius-1);
+    margin-left: 0rem;
   }
 
   &__movie:hover,
