--- a/client/src/components/AllBackdrops/_allBackdrops.scss
+++ b/client/src/components/AllBackdrops/_allBackdrops.scss
@@ -84,6 +84,7 @@
         background: var(--primary);
         border-radius: 50%;
         margin-left: 0.5rem;
+        font-weight: 500;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
         span {
