--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -42,6 +42,7 @@
         font-weight: 900;
         font-size: 1.5rem;
         border-radius: var(--border-radius-1);
+        //font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
 
       .title:hover {
