--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -78,10 +78,11 @@
 
     .category-title,
     .genre-title {
-      font-size: 1.2rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 700;
       padding-left: 2rem;
       margin-bottom: 1rem;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
     &__genre,
