--- a/client/src/components/AllVideos/_allVideos.scss
+++ b/client/src/components/AllVideos/_allVideos.scss
@@ -86,6 +86,7 @@
         border-radius: 50%;
         margin-left: 0.5rem;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
 
         span {
           position: absolute;
