--- a/client/src/components/Card/_card.scss
+++ b/client/src/components/Card/_card.scss
@@ -112,17 +112,17 @@
 
       &--title {
         margin: 2rem 2rem 0 2rem;
-        font-weight: 700;
+        font-weight: 500;
         text-align: center;
         margin: 1rem 1rem 0.25rem 1rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        //font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
 
       &--date {
         margin: 0rem 1rem 1rem 1rem;
         font-size: 0.8rem;
-        font-weight: 500;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 400;
+        //font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
 
       &__options {
