--- a/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
+++ b/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
@@ -26,6 +26,7 @@
         background: var(--primary);
         border-radius: 50%;
         margin-left: 0.5rem;
+        font-weight: 500;
 
         span {
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
