--- a/client/src/components/FullCast/_fullCast.scss
+++ b/client/src/components/FullCast/_fullCast.scss
@@ -75,6 +75,7 @@
       }
 
       .length {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 0;
         position: relative;
         height: 30px;
@@ -82,6 +83,7 @@
         background: var(--primary);
         border-radius: 50%;
         margin-left: 0.5rem;
+        font-weight: 500;
 
         span {
           position: absolute;
