--- a/client/src/components/ImageDetail/_imageDetail.scss
+++ b/client/src/components/ImageDetail/_imageDetail.scss
@@ -118,7 +118,7 @@
             color: rgb(156, 156, 156);
             display: flex;
             align-items: center;
-            font-weight: 400;
+            font-weight: 500;
             font-size: 0.8rem;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
           }
@@ -161,6 +161,7 @@
           padding-right: 1rem;
           border-radius: 25px;
           font-weight: 500;
+          // font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
         .play-btn:hover {
@@ -229,7 +230,7 @@
               color: rgb(156, 156, 156);
               display: flex;
               align-items: center;
-              font-weight: 400;
+              font-weight: 500;
               font-size: 0.8rem;
               font-family: Verdana, Geneva, Tahoma, sans-serif;
             }
