--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -9,7 +9,7 @@
     align-items: center;
     font-size: 1rem;
     font-weight: 700;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: var(--font-family-2);
     margin-bottom: 2rem;
     border-left: 4px solid var(--primary);
 
