--- a/client/src/pages/ActorDetail/_actorDetail.scss
+++ b/client/src/pages/ActorDetail/_actorDetail.scss
@@ -51,7 +51,7 @@
           font-size: 1.25rem;
           font-weight: 700;
           margin-bottom: 1rem;
-          font-family: Verdana, Geneva, Tahoma, sans-serif;
+          font-family: var(--font-family-2);
         }
 
         .birth {
@@ -77,7 +77,7 @@
       h3 {
         margin: 0 0 1rem 0;
         font-weight: 1.25rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-family: var(--font-family-2);
       }
 
       span {
@@ -159,57 +159,6 @@
         width: 100%;
         height: 75vh;
       }
-
-      // &__img-name-birth-place {
-      //   margin-bottom: 0rem;
-      //   flex-direction: row;
-
-      //   &--image {
-      //     width: 120px;
-      //     height: 180px;
-      //     margin-right: 1rem;
-      //     margin-bottom: 2rem;
-
-      //     .img {
-      //       width: 120px;
-      //       height: 180px;
-      //       border-radius: var(--border-radius-1);
-      //     }
-      //   }
-
-      //   &__detail {
-      //     .name,
-      //     .place,
-      //     .birth {
-      //       width: 100%;
-      //       width: unset;
-      //     }
-
-      //     .name {
-      //       font-size: 1rem;
-      //     }
-
-      //     .place,
-      //     .birth {
-      //       font-size: 0.8rem;
-      //     }
-
-      //     .tag {
-      //       width: 100%;
-      //       font-size: 0.9rem;
-      //     }
-      //   }
-      // }
-
-      // &__bio {
-      //   h3 {
-      //     font-size: 1rem;
-      //     margin-bottom: 0.5rem;
-      //   }
-      //   span {
-      //     font-size: 0.9rem;
-      //   }
-      // }
     }
   }
 }
