--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -69,6 +69,9 @@
 
   --box-shadow-1: 0 0 1px rgba(0, 0, 0, 1);
   --box-shadow-2: 0 0 5px rgba(0, 0, 0, 0.5);
+
+  --font-family-1: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  --font-family-2: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .primaryBg {
